tests/core/ill-typed/bad-if-3.stella
language core;

fn main(x : Nat) -> Nat {
    return (if false then 0 else fn(x : Nat) { return 0; })(0);
}